# docs/api/openapi.yaml
@@ -1361,6 +1361,11 @@ paths:
       responses:
         "200":
           description: Trips owned by the current owner only
+          headers:
+            Cache-Control:
+              schema:
+                type: string
+                const: private, no-store
           content:
             application/json:
               schema:
@@ -1433,6 +1438,10 @@ paths:
         "201":
           description: Trip created
           headers:
+            Cache-Control:
+              schema:
+                type: string
+                const: private, no-store
             ETag:
               $ref: "#/components/headers/ETag"
             Location:
@@ -1492,6 +1501,10 @@ paths:
         "200":
           description: Complete trip view
           headers:
+            Cache-Control:
+              schema:
+                type: string
+                const: private, no-store
             ETag:
               $ref: "#/components/headers/ETag"
           content:
